<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MultiSweeper</string>
    <string name="action_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_home">MultiSweeper</string>
    <string name="singleplayer_button">Singleplayer</string>
    <string name="multiplayer_button">Multiplayer</string>
    <string name="continue_game">Continue</string>
    <string name="high_scores">Leaderboards</string>
    <string name="rules">Rules</string>
    <string name="exit">Exit</string>
    <string name="title_activity_single_player">SingleSweeper</string>
    <string name="difficulty_title">Choose a difficulty</string>
    <string name="easy_label">Easy</string>
    <string name="medium_label">Medium</string>
    <string name="hard_label">Hard</string>
    <string name="title_activity_rules">Rules</string>
    <string name="rules_content">Press Quad; Numbers surroundings mines; Blank no mines; Flag mark mines; Hit mines game over; Discover all non mines fields win game</string>
    <string name="timer">000</string>
    <string name="smiley">:)</string>
    <string name="title_activity_multi_player">MultiSweeper</string>
    <string name="gamestate_won">You have won!</string>
    <string name="gamestate_lost">Game over</string>
    <string name="gamestate_button">OK</string>
    <string name="quickgame_button">Quick game</string>
    <string name="invite_button">Invite player</string>
    <string name="invatations_button">Show invitations</string>
    <string name="action_reset">Reset</string>
    <string name="action_new">Start new game</string>
    <string name="timer_title">Timer</string>
    <string name="minecounter_title">Mines</string>
    <string name="new_game">Try again</string>
    <string name="back">Back</string>
    <string name="achievement_button">Achievements</string>
    <string name="action_logout">G+ Sign-out</string>
    <string name="app_title">"Hello\nSweeper"</string>
</resources>
