<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.gehle.pauls.multisweeper.SinglePlayerActivity">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="0,1">

        <TableRow>

            <TextView
                android:id="@+id/TimerTitle"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_column="0"
                android:gravity="center"
                android:text="@string/timer_title"
                android:textColor="#ff00d9ff"
                android:textSize="20sp" />

            <TextView
                android:layout_weight="1"
                android:id="@+id/MineCountTitle"
                android:layout_width="0dp"
                android:layout_column="1"
                android:gravity="center"
                android:text="@string/minecounter_title"
                android:textColor="#ff00d9ff"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/Timer"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_column="0"
                android:text="@string/timer"
                android:textColor="#ff00d9ff"
                android:textSize="35sp"
                android:gravity="center" />

            <TextView
                android:layout_weight="1"
                android:id="@+id/MineCount"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_column="1"
                android:gravity="center"
                android:text="@string/timer"
                android:textColor="#ff00d9ff"
                android:textSize="35sp" />
        </TableRow>

        <TableRow>

            <ScrollView
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="4"
                android:scrollbarStyle="insideOverlay"
                android:scrollbars="vertical|horizontal">

                <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/MineField"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/game_board"></TableLayout>
                </HorizontalScrollView>
            </ScrollView>
        </TableRow>
    </TableLayout>

</LinearLayout>
